UI gaps fix: #400 Add visual sync direction line to set cloud sync modal

--- a/frontend/src/app/components/modals/edit-cloud-sync-modal/edit-cloud-sync-modal.less
+++ b/frontend/src/app/components/modals/edit-cloud-sync-modal/edit-cloud-sync-modal.less
@@ -4,7 +4,6 @@
     .status-line {
         margin: -@gutter;
         margin-bottom: 0;
-        background: @color1;
         line-height: 54px;
     }
 
