--- a/frontend/src/app/components/modals/set-cloud-sync-modal/set-cloud-sync-modal.less
+++ b/frontend/src/app/components/modals/set-cloud-sync-modal/set-cloud-sync-modal.less
@@ -4,4 +4,10 @@
     .freq-unit {
         width: 150px;
     }
+
+    .status-line {
+        margin: -@gutter;
+        height: 54px;
+        line-height: 54px;
+    }
 }
