--- a/frontend/src/app/styles/site.less
+++ b/frontend/src/app/styles/site.less
@@ -320,6 +320,14 @@ body:not(.preview) .preview-only {
     }
 }
 
+.alt-bg-dark {
+    background-color: @color1;
+
+    &::-webkit-scrollbar-thumb, ::-webkit-scrollbar-thumb {
+        border-color: @color1;
+    }
+}
+
 .borders {
     border: 1px solid @color15;
 }
